--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+#game_container{
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+  margin: auto;
+
+  width: 600px;
+  height: 500px;
+  background-color: #282c34;
+  
+}
+
+#game_canvas{
+  background-image: url(./sprites/background_test.png);
+  background-size: contain;
+  width: 600px;
+  height: 360px;
+}
+
 .App {
   text-align: center;
 }
