--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.each-slide > div {
+  /* display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  height: 300px; */
+
+  background-size: cover;
+  width: 600px;
+  height: 400px;
+  
+}
+
